# ipif-client-python

./: .gitignore  README.md  Untitled.ipynb  api-sketch.py  apis-test-script.py  figure_out_merge.py  figure_out_reconcile_ids.py  pyproject.toml
ipif_client/: __init__.py  exceptions.py  ipif.py  ipif_entity_types.py  ipif_queryset.py
ipif_client/utils/: bunch.py  statements_container.py
tests/: test_data.py  test_ipif_client.py  test_ipif_queryset.py  test_ipif_type_classes.py  test_persons.py
